ConsoleTools Commando
====================================================================================================

v2.1.0
----------------------------------------------------------------------------------------------------
- [feature] Added more helper setup methods for registering commands.

v2.0.0
----------------------------------------------------------------------------------------------------
- [syntax ] Allow '=' and ':' as name-value separators.
- [syntax ] Used only '--' for parameter names.
- [feature] Added a Ninject configuration helper package.
- [feature] Added support for anonymous commands (command without a verb).
- [feature] Added base classes for commands and views.
- [feature] Changed the attributes for commands and parameters.
- [feature] Extracted the parsing logic into a different package.
- [feature] Added support for parameter of type Encoding.
- [feature] Added Starting and Ended events for the Application.
- [feature] Added support for multiple command with same name.

v1.5.0
----------------------------------------------------------------------------------------------------
- [feature] Improved the information displayed by the help command.

v1.4.0
----------------------------------------------------------------------------------------------------
- [feature] Added in the more details about the command being executed in the CommandCreated event.

v1.3.0
----------------------------------------------------------------------------------------------------
- [bugfix] Removed the "velo" references from the "help" information.

v1.2.0
----------------------------------------------------------------------------------------------------
- unreleased version

v1.1.0
----------------------------------------------------------------------------------------------------
- unreleased version

v1.0.0
----------------------------------------------------------------------------------------------------